--- a/src/components/SectionHeader/SectionHeader.module.scss
+++ b/src/components/SectionHeader/SectionHeader.module.scss
@@ -3,7 +3,7 @@
 .header {
   @include flex-row(null, flex-end);
   width: 100%;
-  margin-bottom: 42px;
+  margin-bottom: 2.5rem;
 
   h2 {
     font-size: 2rem;
@@ -22,5 +22,17 @@
   i {
     font-size: 0.55rem;
     line-height: 1.4rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .header {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1.5rem;
+  }
+
+  .view:first-child {
+    display: none;
   }
 }
