--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -5,16 +5,16 @@
 }
 
 .collections {
-  width: 100%;
-  padding: 0 3vw;
-  margin-top: 52px;
+  width: min(94%, 1500px);
+  margin-inline: auto;
+  margin-top: 3rem;
 }
 
 .cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 1fr;
-  gap: 16px;
+  gap: 1rem;
   width: 100%;
 
   // Make grid track height same as width
@@ -35,11 +35,11 @@
 .about {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width: 85%;
-  margin: 80px 0;
+  width: min(85%, 1275px);
+  margin-block: 5rem;
 
   div {
-    @include flex-col(48px, center, center);
+    @include flex-col(3rem, center, center);
   }
 
   img {
@@ -51,6 +51,8 @@
   background: $clr-primary;
   color: $clr-neutral-light;
   font-size: 1.2rem;
+  text-align: center;
+  padding: 1.5rem 1rem;
 
   h2 {
     font-size: 2.5rem;
@@ -58,11 +60,46 @@
 }
 
 .trending {
-  padding: 0 3vw;
-  margin-bottom: 52px;
+  width: min(94%, 1500px);
+  margin-inline: auto;
+  margin-bottom: 3rem;
 }
 
 .cases {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  row-gap: 1rem;
+}
+
+@media (max-width: 600px) {
+  .collections {
+    margin-top: 2.5rem;
+  }
+
+  .cards {
+    grid-template-columns: 1fr;
+  }
+  
+  .about {
+    grid-template-columns: 1fr;
+    width: 90%;
+    gap: 2rem;
+    margin-block: 3rem;
+
+    div {
+      gap: 2rem;
+    }
+  }
+
+  .info {
+    min-height: 70vw;
+  }
+
+  .trending {
+    margin-bottom: 2.5rem;
+  }
+
+  .cases {
+    grid-template-columns: 1fr 1fr;
+  }
 }
