--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -29,9 +29,9 @@
   @include flex-row(null, center, space-between);
   padding: 20px 2vw;
   position: relative;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 1px rgba(221, 95, 95, 0.3);
 
-  button:nth-child(3) {
+  div:nth-child(3) {
     visibility: hidden;
   }
 }
