--- a/src/pages/Home/Banner/Banner.module.scss
+++ b/src/pages/Home/Banner/Banner.module.scss
@@ -1,7 +1,7 @@
 @import '../../../assets/shared';
 
 .banner {
-  height: 80vh;
+  min-height: 80vh;
   width: 100%;
   background-position: center;
   background-size: cover;
